--- a/web/portal/cart8797.html
+++ b/web/portal/cart8797.html
@@ -70,12 +70,12 @@
                         </button>
                         <div class="logo">
                             <a href="index.html">
-                                <img class="small-logo img-responsive" src="businessasesores/page/assets/img/pic/g95e8.webp" alt="logo">
+                                <img class="small-logo img-responsive" src="https://www.businessasesores.com.co/assets/img/pic/g95e8.webp" alt="logo">
                             </a>
                         </div>
                     </div>
 
-                    <div class="collapse navbar-collapse" id="navbar-collapse">
+                   
 
                         <ul class="nav navbar-nav navbar-right">
 
