--- a/web/portal/cart8797.html
+++ b/web/portal/cart8797.html
@@ -209,94 +209,23 @@
 
                     <ul class="nav navbar-nav navbar-right">
 
-                        <li>
-                                                            <a href="#" class="choose-language" data-toggle="popover" id="languageChooser">
-                                    Español
-                                    <b class="caret"></b>
-                                </a>
-                                <div menuitemname="Change Language" id="languageChooserContent" class="hidden">
-                                    <ul>
-                                                                                    <li>
-                                                <a href="cartf02c.html?a=add&amp;domain=register&amp;language=arabic">العربية</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart67bd.html?a=add&amp;domain=register&amp;language=azerbaijani">Azerbaijani</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cartaacd.html?a=add&amp;domain=register&amp;language=catalan">Català</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart1eee.html?a=add&amp;domain=register&amp;language=chinese">中文</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cartbdc4.html?a=add&amp;domain=register&amp;language=croatian">Hrvatski</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart68cd.html?a=add&amp;domain=register&amp;language=czech">Čeština</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cartc40b.html?a=add&amp;domain=register&amp;language=danish">Dansk</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart840c.html?a=add&amp;domain=register&amp;language=dutch">Nederlands</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart812e.html?a=add&amp;domain=register&amp;language=english">English</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart4dd8.html?a=add&amp;domain=register&amp;language=estonian">Estonian</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart65b6.html?a=add&amp;domain=register&amp;language=farsi">Persian</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart1206.html?a=add&amp;domain=register&amp;language=french">Français</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart1507.html?a=add&amp;domain=register&amp;language=german">Deutsch</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cartc657.html?a=add&amp;domain=register&amp;language=hebrew">עברית</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart906d.html?a=add&amp;domain=register&amp;language=hungarian">Magyar</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart40ca.html?a=add&amp;domain=register&amp;language=italian">Italiano</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart6beb.html?a=add&amp;domain=register&amp;language=macedonian">Macedonian</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cartfc74.html?a=add&amp;domain=register&amp;language=norwegian">Norwegian</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cartba50.html?a=add&amp;domain=register&amp;language=portuguese-br">Português</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cartaccd.html?a=add&amp;domain=register&amp;language=portuguese-pt">Português</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart84e2.html?a=add&amp;domain=register&amp;language=romanian">Română</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart57dc.html?a=add&amp;domain=register&amp;language=russian">Русский</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart8797.html?a=add&amp;domain=register&amp;language=spanish">Español</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart512f.html?a=add&amp;domain=register&amp;language=swedish">Svenska</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart1795.html?a=add&amp;domain=register&amp;language=turkish">Türkçe</a>
-                                            </li>
-                                                                                    <li>
-                                                <a href="cart43a1.html?a=add&amp;domain=register&amp;language=ukranian">Українська</a>
-                                            </li>
-                                                                            </ul>
-                                </div>
-                                                    </li>
+                       <li>
+                    <a href="#" class="choose-language" data-toggle="popover" id="languageChooser">
+                        Español
+                        <b class="caret"></b>
+                    </a>
+                    <div id="languageChooserContent" class="hidden">
+                        <ul>                                                                              
+                                                            <li>
+                                    <a href="cart812e.html?a=add&amp;domain=register&amp;language=english">English</a>
+                                </li>
+                                                            <li>                                  
+                                    <a href="cart2029.html?a=add&amp;domain=register&amp;language=spanish">Español</a>
+                                </li>                                     
+                                                                       </ul>
+                    </div>
+                </li>
+                                        <li>
                         <li menuItemName="Account" class="dropdown" id="Secondary_Navbar-Account">
             <a class="dropdown-toggle" data-toggle="dropdown" href="#">
                         Cuenta
