--- a/cart2029.html
+++ b/cart2029.html
@@ -39,7 +39,12 @@
 
 </head>
 <body data-phone-cc-input="1">
-
+<div class="wrapper_content">
+    <header>
+        <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
+            <nav class="navigation">
+                <div class="container">
+                    <div class="navbar-header">
 
 
 <section id="header">
