--- a/cart8797.html
+++ b/cart8797.html
@@ -17,7 +17,8 @@
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:400,700" rel="stylesheet">
 <link href="web/portal/templates/six/css/all.min55d7.css?v=afb1df" rel="stylesheet">
 <link href="web/portal/assets/css/fontawesome-all.min.css" rel="stylesheet">
-<link href="web/portal/templates/ifastnet-child/css/custom.css" rel="stylesheet">
+<link href="assets/css/fontawesome-all.min.css" rel="stylesheet">
+<link href="templates/six/css/custom.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
