--- a/cart8797.html
+++ b/cart8797.html
@@ -15,9 +15,9 @@
             <!-- head -->
         <!-- Styling -->
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:400,700" rel="stylesheet">
-<link href="templates/six/css/all.min55d7.css?v=afb1df" rel="stylesheet">
-<link href="assets/css/fontawesome-all.min.css" rel="stylesheet">
-<link href="templates/ifastnet-child/css/custom.css" rel="stylesheet">
+<link href="web/portal/templates/six/css/all.min55d7.css?v=afb1df" rel="stylesheet">
+<link href="web/portal/assets/css/fontawesome-all.min.css" rel="stylesheet">
+<link href="web/portal/templates/ifastnet-child/css/custom.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -36,7 +36,7 @@
         requiredText = 'Necesario',
         recaptchaSiteKey = "";
 </script>
-<script src="templates/six/js/scripts.min55d7.js?v=afb1df"></script>
+<script src="web/portal/templates/six/js/scripts.min55d7.js?v=afb1df"></script>
 
         
         <script type="text/javascript">
@@ -49,7 +49,7 @@
 
 
         <link rel="stylesheet" type="text/css" href="templates/ifastnet-child/assets/css/style.css" media="screen">
-        <link href="templates/ifastnet-child/css/custom.css" rel="stylesheet">
+        <link href="web/portal/templates/ifastnet-child/css/custom.css" rel="stylesheet">
     <link rel="icon" type="image/x-icon" href="businessasesores/page/assets/img/favicon/favicon.ico" />
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
 </head>
