--- a/web/portal/cart8797.html
+++ b/web/portal/cart8797.html
@@ -50,7 +50,7 @@
 
         <link rel="stylesheet" type="text/css" href="templates/ifastnet-child/assets/css/style.css" media="screen">
         <link href="templates/ifastnet-child/css/custom.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="businessasesores/page/assets/img/favicon/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="https://www.businessasesores/page/assets/img/favicon/favicon.ico" />
     <link rel="icon" href="../favicon.ico" type="image/x-icon">
 </head>
 <body data-phone-cc-input="1">
@@ -61,7 +61,8 @@
         <nav class="navbar navbar-default navbar-fixed-top" role="navigation">
             <nav class="navigation">
                 <div class="container">
-                    <div class="navbar-header">
+                    <div class="navbar-header">  </a>
+                            <li>
                         
                             <span class="sr-only">Toggle navigation</span>
                             <span class="icon-bar"></span>
