--- a/web/portal/cart8797.html
+++ b/web/portal/cart8797.html
@@ -68,11 +68,20 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
-                        </button>
-                        <div class="logo">
-                            <a href="index.html">
-                                <img class="small-logo img-responsive" src="https://www.businessasesores.com.co/assets/img/pic/g95e8.webp" alt="logo">
-                           </a>
+                      </a>                  
+                            </li>
+                              </ul>
+
+                   </li>
+                    <div class="logo">
+           <a id="logo-header" href="https://www.businessasesores.com.co">
+          <img src="https://www.businessasesores.com.co/assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"></div>
+
+
+</a> 
+			  
+                       </li>
+
                         </div>
                     </div>
 
