--- a/web/portal/cart8797.html
+++ b/web/portal/cart8797.html
@@ -71,7 +71,7 @@
                             </button>
                               <div class="logo">
                               <a id="logo-header" href="https://www.businessasesores.com.co">
-                             <img class="https://www.businessasesores.com.co/assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"></div>
+                             <img class="small-logo img-responsive" src="https://www.businessasesores.com.co/assets/img/pic/g95e8.webp" alt="logo">
                            </a>
                         </div>
                     </div>
