--- a/web/portal/cart8797.html
+++ b/web/portal/cart8797.html
@@ -50,8 +50,8 @@
 
         <link rel="stylesheet" type="text/css" href="templates/ifastnet-child/assets/css/style.css" media="screen">
         <link href="templates/ifastnet-child/css/custom.css" rel="stylesheet">
-    <link rel="icon" type="image/x-icon" href="https://www.businessasesores/page/assets/img/favicon/favicon.ico" />
-    <link rel="icon" href="../favicon.ico" type="image/x-icon">
+    <link rel="shortcut icon" href="page/blob/main/assets/img/favicon/favicon.ico" type="image/x-icon">
+    <link rel="icon" href="page/blob/main/assets/img/favicon/favicon.ico" type="image/x-icon">
 </head>
 <body data-phone-cc-input="1">
 
@@ -68,10 +68,14 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
-                            </button>
+                            </a>                  
+                            </li>
+                              </ul>
+
+                   </li>
                               <div class="logo">
                               <a id="logo-header" href="https://www.businessasesores.com.co">
-                             <img class="small-logo img-responsive" src="https://www.businessasesores.com.co/assets/img/pic/g95e8.webp" alt="logo">
+                             <img class="small-logo img-responsive" src="https://www.businessasesores.com.co/assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"></div> alt="logo"> 
                            </a>
                         </div>
                     </div>
