--- a/web/portal/cart8797.html
+++ b/web/portal/cart8797.html
@@ -73,9 +73,10 @@
                               </ul>
 
                    </li>
+                               </button>
                               <div class="logo">
                               <a id="logo-header" href="https://www.businessasesores.com.co">
-                             <img class="small-logo img-responsive" src="https://www.businessasesores.com.co/assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"></div> alt="logo"> 
+                             <img class="small-logo img-responsive" src="https://www.businessasesores.com.co/assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"> alt="logo"> </div>
                            </a>
                         </div>
                     </div>
@@ -113,7 +114,15 @@
         </nav>
     </header>
 
+</a> 
+			  
+                       </li>
 
+
+
+
+          </div>
+         </section>
         <section id="main-menu">
 
         <nav id="nav" class="navbar navbar-default navbar-main" role="navigation">
