--- a/web/portal/cart8797.html
+++ b/web/portal/cart8797.html
@@ -68,15 +68,10 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
-                            </a>                  
-                            </li>
-                              </ul>
-
-                   </li>
                                </button>
                               <div class="logo">
                               <a id="logo-header" href="https://www.businessasesores.com.co">
-                             <img class="small-logo img-responsive" src="https://www.businessasesores.com.co/assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"> alt="logo"> </div>
+                             <img class="small-logo img-responsive" src="https://www.businessasesores.com.co/assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"> </div>
                            </a>
                         </div>
                     </div>
