--- a/web/portal/cart8797.html
+++ b/web/portal/cart8797.html
@@ -68,11 +68,10 @@
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
                             <span class="icon-bar"></span>
-                        </button>
-                        <div class="logo">
-                            <a href="index.html">
-                                <img class="small-logo img-responsive" src="https://www.businessasesores.com.co/assets/img/pic/g95e8.webp" ;" title="Hosting Dominios | Business asesores"></div>
-                               alt="logo">
+                            </button>
+                              <div class="logo">
+                              <a id="logo-header" href="https://www.businessasesores.com.co">
+                             <img class="small-logo img-responsive" src="https://www.businessasesores.com.co/assets/img/pic/g95e8.webp" alt="logo">
                            </a>
                         </div>
                     </div>
@@ -82,29 +81,20 @@
                         <ul class="nav navbar-nav navbar-right">
 
                             <li >
-                                <a href="../index-2.html">Home</a>
+                                <a href="#">Business</a>
                             </li>
 
                             <li>
-                                <a href="sharedhosting.html">Premium Hosting</a>
+                                <a href="sharedhosting.html">Registrar dominio</a>
                             </li>
 
                             <li>
-                                <a href="businesshosting.html">Business Hosting</a>
+                                <a href="#">Hosting Shop</a>
                             </li>
 
                             <li>
-                                <a href="whmreseller.html">WHM Reseller</a>
-                            </li>
-
-                            <li>
-                                <a href="vpshosting.html">VPS Plans</a>
-                            </li>
-                            <li>
-                                <a href="dedicatedserver.html">Dedicated Servers</a>
-                            </li>
-                            <li>
-                                <a href="cart2029.html">Register Domain</a>
+                                <a href="#">WHM Reseller</a>
+                            
                             </li>
                             <li>
                                 
