--- a/cartreginame.html
+++ b/cartreginame.html
@@ -15,9 +15,11 @@
             <!-- head -->
         <!-- Styling -->
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:400,700" rel="stylesheet">
-<link href="portal/templates/six/css/all.min55d7.css?v=afb1df" rel="stylesheet">
-<link href="portal/assets/css/fontawesome-all.min.css" rel="stylesheet">
+<link href="templates/six/css/all.min55d7.css?v=afb1df" rel="stylesheet">
 <link href="portal/templates/ifastnet-child/css/custom.css" rel="stylesheet">
+<link href="assets/css/fontawesome-all.min.css" rel="stylesheet">
+<link href="templates/ifastnet-child/css/custom.css" rel="stylesheet">
+
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -49,7 +51,7 @@
 
 
         <link rel="stylesheet" type="text/css" href="templates/ifastnet-child/assets/css/style.css" media="screen">
-        <link href="portal/templates/ifastnet-child/css/custom.css" rel="stylesheet">
+        <link href="templates/ifastnet-child/css/custom.css" rel="stylesheet">
     <link rel="shortcut icon" href="page/blob/main/assets/img/favicon/favicon.ico" type="image/x-icon">
     <link rel="icon" href="page/blob/main/assets/img/favicon/favicon.ico" type="image/x-icon">
 </head>
