--- a/cartreginame.html
+++ b/cartreginame.html
@@ -15,7 +15,7 @@
             <!-- head -->
         <!-- Styling -->
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:400,700" rel="stylesheet">
-<link href="templates/six/css/all.min55d7.css?v=afb1df" rel="stylesheet">
+<link href="portal/templates/six/css/all.min55d7.css?v=afb1df" rel="stylesheet">
 <link href="portal/assets/css/fontawesome-all.min.css" rel="stylesheet">
 <link href="portal/templates/ifastnet-child/css/custom.css" rel="stylesheet">
 
