--- a/cartreginame.html
+++ b/cartreginame.html
@@ -50,7 +50,7 @@
 
 
         <link rel="stylesheet" type="text/css" href="templates/ifastnet-child/assets/css/style.css" media="screen">
-        <link href="templates/ifastnet-child/css/custom.css" rel="stylesheet">
+        <link href="portal/templates/ifastnet-child/css/custom.css" rel="stylesheet">
     <link rel="shortcut icon" href="page/blob/main/assets/img/favicon/favicon.ico" type="image/x-icon">
     <link rel="icon" href="page/blob/main/assets/img/favicon/favicon.ico" type="image/x-icon">
 </head>
@@ -287,8 +287,8 @@
         <div class="col-xs-12 main-content">
             
 
-<link rel="stylesheet" type="text/css" href="templates/orderforms/standard_cart/css/all.min55d7.css?v=afb1df" />
-<script type="text/javascript" src="templates/orderforms/standard_cart/js/scripts.min55d7.js?v=afb1df"></script>
+<link rel="stylesheet" type="text/css" href="portal/templates/orderforms/standard_cart/css/all.min55d7.css?v=afb1df" />
+<script type="text/javascript" src="portal/templates/orderforms/standard_cart/js/scripts.min55d7.js?v=afb1df"></script>
 <div id="order-standard_cart">
 
     <div class="row">
@@ -821,7 +821,7 @@ jQuery(document).ready(function() {
                                 <li><a href="vpshosting.html">VPS Hosting</a></li>
                                 <li><a href="dedicatedserver.html">Dedicated Servers</a></li>
                                 <li><a href="cart2029.html">Domain Registration</a></li>
-                                <li><a href="http://www.myownfreehost.net/" target="blank">MyOwnFreeHost.net</a></li>
+                                <li><a href="#" target="blank">MyOwnFreeHost.net</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -844,7 +844,7 @@ jQuery(document).ready(function() {
                     </div>
                     <div class="col-sm-12  col-md-4">
                         <h5 class="heading-white">Support</h5>
-                        <a href="http://support.ifastnet.com/" target="_blank">http://support.ifastnet.com</a>
+                        <a href="#" target="_blank">http://support.ifastnet.com</a>
                                             </div>
 
                     <div class="hidden-xs hidden-sm col-sm-12 col-md-12 center-row-container">
@@ -983,7 +983,7 @@ jQuery(document).ready(function() {
 </form>
     
 
-<script type="text/javascript" src="templates/ifastnet-child/assets/js/general.js"></script>
+<script type="text/javascript" src="portal/templates/ifastnet-child/assets/js/general.js"></script>
 
 
 
