--- a/cartreginame.html
+++ b/cartreginame.html
@@ -18,7 +18,7 @@
 <link href="portal/templates/six/css/all.min55d7.css?v=afb1df" rel="stylesheet">
 <link href="assets/css/fontawesome-all.min.css" rel="stylesheet">
 <link href="templates/ifastnet-child/css/custom.css" rel="stylesheet">
-
+<link href="templates/six/css/custom.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
