--- a/cartreginame.html
+++ b/cartreginame.html
@@ -648,6 +648,38 @@
 
             <div class="domain-pricing">
 
+                                    <div class="featured-tlds-container">
+                        <div class="row">
+                                                                                            <div class="col-lg-4 col-sm-6">
+                                    <div class="featured-tld">
+                                        <div class="img-container">
+                                            <img src="assets/img/tld_logos/site.png">
+                                        </div>
+                                        <div class="price site">
+                                                                                            $1.99/año                                                                                    </div>
+                                    </div>
+                                </div>
+                                                                                            <div class="col-lg-4 col-sm-6">
+                                    <div class="featured-tld">
+                                        <div class="img-container">
+                                            <img src="assets/img/tld_logos/space.png">
+                                        </div>
+                                        <div class="price space">
+                                                                                            $2.99/año                                                                                    </div>
+                                    </div>
+                                </div>
+                                                                                            <div class="col-lg-4 col-sm-6">
+                                    <div class="featured-tld">
+                                        <div class="img-container">
+                                            <img src="assets/img/tld_logos/online.png">
+                                        </div>
+                                        <div class="price online">
+                                                                                            $2.99/año                                                                                    </div>
+                                    </div>
+                                </div>
+                                                    </div>
+                    </div>
+
                 
                 <h4 class="font-size-18">Ver extensiones por categoría</h4>
 
@@ -660,9 +692,9 @@
                         <div class="col-md-4">Nombre de Dominio</div>
                         <div class="col-md-8">
                             <div class="row no-gutters">
-                                <div class="col-xs-4 col-4">Precio registro</div>
-                                <div class="col-xs-4 col-4">Transferir</div>
-                                <div class="col-xs-4 col-4">Renovar</div>
+                                <div class="col-xs-4 col-4">registrar $</div>
+                                <div class="col-xs-4 col-4">Transferir$</div>
+                                <div class="col-xs-4 col-4">Renovar $</div>
                             </div>
                         </div>
                     </div>
@@ -848,20 +880,20 @@ jQuery(document).ready(function() {
 
                     <div class="hidden-xs hidden-sm col-sm-12 col-md-12 center-row-container">
                         <div class="center-row">
-                            <img src="comodo_secure_seal_113x59_transp.png" border="0" alt="Comodo EV SSL Secured">
-                            <img src="templates/ifastnet-child/assets/images/visa_debit.gif" border="0" alt="Visa Debit payments supported by WorldPay">
-                            <img src="templates/ifastnet-child/assets/images/visa_electron.gif" border="0" alt="Visa Electron payments supported by WorldPay">
-                            <img src="templates/ifastnet-child/assets/images/mastercard.gif" border="0" alt="Mastercard payments supported by WorldPay">
-                            <img src="templates/ifastnet-child/assets/images/maestro.gif" border="0" alt="Maestro payments supported by WorldPay">
+                            <img src="page/comodo_secure_seal_113x59_transp.png" border="0" alt="Comodo EV SSL Secured">
+                            <img src="page/templates/ifastnet-child/assets/images/visa_debit.gif" border="0" alt="Visa Debit payments supported by WorldPay">
+                            <img src="page/templates/ifastnet-child/assets/images/visa_electron.gif" border="0" alt="Visa Electron payments supported by WorldPay">
+                            <img src="page/templates/ifastnet-child/assets/images/mastercard.gif" border="0" alt="Mastercard payments supported by WorldPay">
+                            <img src="page/templates/ifastnet-child/assets/images/maestro.gif" border="0" alt="Maestro payments supported by WorldPay">
                             <img src="templates/ifastnet-child/assets/images/AMEX.gif" border="0" alt="American Express payments supported by WorldPay">
-                            <img src="templates/ifastnet-child/assets/images/diners.gif" border="0" alt="Diners payments supported by WorldPay">
-                            <img src="templates/ifastnet-child/assets/images/JCB.gif" border="0" alt="JCB payments supported by WorldPay">
-                            <img src="templates/ifastnet-child/assets/images/laser.gif" border="0" alt="Laser payments supported by WorldPay">
-                            <img src="templates/ifastnet-child/assets/images/ELV.gif" border="0" alt="ELV payments supported by WorldPay">
-                            <img src="templates/ifastnet-child/assets/images/poweredByWorldPay.gif" height="40" width="140" border="0" alt="Worldpay payments" />
-                            <img src="templates/ifastnet-child/assets/images/2co11.jpg"  height="40" width="90" border="0" alt="2CheckOut payments" />
-                            <img src="templates/ifastnet-child/assets/images/alipay-small-whitebg.png" height="40" width="120"  border="0" alt="AliPay" />
-                            <img src="images/netbanking_in.png" height="40" width="120"  border="0" alt="NetBanking" />
+                            <img src="page/templates/ifastnet-child/assets/images/diners.gif" border="0" alt="Diners payments supported by WorldPay">
+                            <img src="page/templates/ifastnet-child/assets/images/JCB.gif" border="0" alt="JCB payments supported by WorldPay">
+                            <img src="page/templates/ifastnet-child/assets/images/laser.gif" border="0" alt="Laser payments supported by WorldPay">
+                            <img src="page/templates/ifastnet-child/assets/images/ELV.gif" border="0" alt="ELV payments supported by WorldPay">
+                            <img src="page/templates/ifastnet-child/assets/images/poweredByWorldPay.gif" height="40" width="140" border="0" alt="Worldpay payments" />
+                            <img src="page/templates/ifastnet-child/assets/images/2co11.jpg"  height="40" width="90" border="0" alt="2CheckOut payments" />
+                            <img src="page/templates/ifastnet-child/assets/images/alipay-small-whitebg.png" height="40" width="120"  border="0" alt="AliPay" />
+                            <img src="page/images/netbanking_in.png" height="40" width="120"  border="0" alt="NetBanking" />
 
                         </div>
                     </div>
