--- a/cartreginame.html
+++ b/cartreginame.html
@@ -852,7 +852,7 @@ jQuery(document).ready(function() {
                                 <li><a href="vpshosting.html">VPS Hosting</a></li>
                                 <li><a href="dedicatedserver.html">Dedicated Servers</a></li>
                                 <li><a href="cart2029.html">Domain Registration</a></li>
-                                <li><a href="#" target="blank">MyOwnFreeHost.net</a></li>
+                                <li><a href="#" target="blank">#</a></li>
                             </ul>
                         </div>
                         <div class="col-md-3 col-sm-6">
@@ -875,25 +875,25 @@ jQuery(document).ready(function() {
                     </div>
                     <div class="col-sm-12  col-md-4">
                         <h5 class="heading-white">Support</h5>
-                        <a href="#" target="_blank">http://support.ifastnet.com</a>
+                        <target="_blank">soporte@businessasesores.com.co</a>
                                             </div>
 
                     <div class="hidden-xs hidden-sm col-sm-12 col-md-12 center-row-container">
                         <div class="center-row">
-                            <img src="page/comodo_secure_seal_113x59_transp.png" border="0" alt="Comodo EV SSL Secured">
-                            <img src="page/templates/ifastnet-child/assets/images/visa_debit.gif" border="0" alt="Visa Debit payments supported by WorldPay">
-                            <img src="page/templates/ifastnet-child/assets/images/visa_electron.gif" border="0" alt="Visa Electron payments supported by WorldPay">
-                            <img src="page/templates/ifastnet-child/assets/images/mastercard.gif" border="0" alt="Mastercard payments supported by WorldPay">
-                            <img src="page/templates/ifastnet-child/assets/images/maestro.gif" border="0" alt="Maestro payments supported by WorldPay">
-                            <img src="templates/ifastnet-child/assets/images/AMEX.gif" border="0" alt="American Express payments supported by WorldPay">
-                            <img src="page/templates/ifastnet-child/assets/images/diners.gif" border="0" alt="Diners payments supported by WorldPay">
-                            <img src="page/templates/ifastnet-child/assets/images/JCB.gif" border="0" alt="JCB payments supported by WorldPay">
-                            <img src="page/templates/ifastnet-child/assets/images/laser.gif" border="0" alt="Laser payments supported by WorldPay">
-                            <img src="page/templates/ifastnet-child/assets/images/ELV.gif" border="0" alt="ELV payments supported by WorldPay">
-                            <img src="page/templates/ifastnet-child/assets/images/poweredByWorldPay.gif" height="40" width="140" border="0" alt="Worldpay payments" />
-                            <img src="page/templates/ifastnet-child/assets/images/2co11.jpg"  height="40" width="90" border="0" alt="2CheckOut payments" />
-                            <img src="page/templates/ifastnet-child/assets/images/alipay-small-whitebg.png" height="40" width="120"  border="0" alt="AliPay" />
-                            <img src="page/images/netbanking_in.png" height="40" width="120"  border="0" alt="NetBanking" />
+                            <img src="portal/comodo_secure_seal_113x59_transp.png" border="0" alt="Comodo EV SSL Secured">
+                            <img src="portal/templates/ifastnet-child/assets/images/visa_debit.gif" border="0" alt="Visa Debit payments supported by WorldPay">
+                            <img src="portal/templates/ifastnet-child/assets/images/visa_electron.gif" border="0" alt="Visa Electron payments supported by WorldPay">
+                            <img src="portal/templates/ifastnet-child/assets/images/mastercard.gif" border="0" alt="Mastercard payments supported by WorldPay">
+                            <img src="portal/templates/ifastnet-child/assets/images/maestro.gif" border="0" alt="Maestro payments supported by WorldPay">
+                            <img src="portal/templates/ifastnet-child/assets/images/AMEX.gif" border="0" alt="American Express payments supported by WorldPay">
+                            <img src="portal/templates/ifastnet-child/assets/images/diners.gif" border="0" alt="Diners payments supported by WorldPay">
+                            <img src="portal/templates/ifastnet-child/assets/images/JCB.gif" border="0" alt="JCB payments supported by WorldPay">
+                            <img src="portal/templates/ifastnet-child/assets/images/laser.gif" border="0" alt="Laser payments supported by WorldPay">
+                            <img src="portal/templates/ifastnet-child/assets/images/ELV.gif" border="0" alt="ELV payments supported by WorldPay">
+                            <img src="portal/templates/ifastnet-child/assets/images/poweredByWorldPay.gif" height="40" width="140" border="0" alt="Worldpay payments" />
+                            <img src="portal/templates/ifastnet-child/assets/images/2co11.jpg"  height="40" width="90" border="0" alt="2CheckOut payments" />
+                            <img src="portal/templates/ifastnet-child/assets/images/alipay-small-whitebg.png" height="40" width="120"  border="0" alt="AliPay" />
+                            <img src="portal/images/netbanking_in.png" height="40" width="120"  border="0" alt="NetBanking" />
 
                         </div>
                     </div>
@@ -906,9 +906,7 @@ jQuery(document).ready(function() {
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="copyright">
-                            <p>Copyright &copy 2022 IFastNet LTD, Registered VAT number EU372034688. Registered UK company number 07951746.</p>
-                            <p>Bulman House, Regent Centre, Gosforth, Newcastle upon Tyne, NE3 3LS.</p>All prices shown are exclusive of VAT, which will be charged at the rate of your place of origin.
-                        </div>
+                            <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12"><div class="footer-copyright text-center"><p></p><p style="text-align: center"><strong><a href="https://www.businessasesores.com.co/">Business asesores</a> © 2022</strong></p><p></p></div></div>
                     </div>
                 </div>
             </div>
