--- a/cartreginame.html
+++ b/cartreginame.html
@@ -875,7 +875,7 @@ jQuery(document).ready(function() {
                     </div>
                     <div class="col-sm-12  col-md-4">
                         <h5 class="heading-white">Support</h5>
-                        <target="_blank">soporte@businessasesores.com.co </strong> </a>
+                        <h7 class="heading-white">soporte@businessasesores.com.co </h5> </a>
                                             </div>
 
                     <div class="hidden-xs hidden-sm col-sm-12 col-md-12 center-row-container">
@@ -906,7 +906,7 @@ jQuery(document).ready(function() {
                 <div class="row">
                     <div class="col-sm-12">
                         <div class="copyright">
-                            <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12"><div class="footer-copyright text-center"><p></p><p style="text-align: center"><strong><a href="https://www.businessasesores.com.co/"></strong>Business asesores</a> © 2022</strong></p><p></p></div></div>
+                            <div class="col-md-12 col-lg-12 col-sm-12 col-xs-12"><div class="footer-copyright text-center"><p></p><p style="text-align: center"><strong><a href="https://www.businessasesores.com.co/"></strong></a>Business asesores</a> © 2022</strong></p><p></p></div></div>
                     </div>
                 </div>
             </div>
