--- a/cartreginame.html
+++ b/cartreginame.html
@@ -874,8 +874,8 @@ jQuery(document).ready(function() {
                         </div>
                     </div>
                     <div class="col-sm-12  col-md-4">
-                        <h5 class="heading-white">Support</h5>
-                        <img loading="lazy" width="163" height="68" class="wp-image-6163" style="width: 100x;" src="assets/img/pic/image832.webp" alt="">
+                        <h5 class="heading-white">soporte clientes</h5>
+                        <img loading="lazy" width="133" height="65" class="wp-image-6163" style="width: 100x;" src="assets/img/pic/image832.webp" alt="">
                            <ul class="menu">
                       <h7 class="heading-white">Email: soporte@businessasesores.com.co </a></li>
                     
