--- a/cartreginame.html
+++ b/cartreginame.html
@@ -903,13 +903,14 @@ jQuery(document).ready(function() {
                             <img src="portal/templates/ifastnet-child/assets/images/visa_electron.gif" border="0" alt="Visa Electron payments supported by WorldPay">
                             <img src="portal/templates/ifastnet-child/assets/images/mastercard.gif" border="0" alt="Mastercard payments supported by WorldPay">
                             <img src="portal/templates/ifastnet-child/assets/images/maestro.gif" border="0" alt="Maestro payments supported by WorldPay">
-                            <img src="portal/templates/ifastnet-child/assets/images/AMEX.gif" border="0" alt="American Express payments supported by WorldPay">
+                            <img src="portal/templates/ifastnet-child/assets/images/AMEX.png" border="0" alt="American Express payments supported by WorldPay">
                             <img src="portal/templates/ifastnet-child/assets/images/diners.gif" border="0" alt="Diners payments supported by WorldPay">
                             <img src="portal/templates/ifastnet-child/assets/images/JCB.gif" border="0" alt="JCB payments supported by WorldPay">
-                            <img src="portal/templates/ifastnet-child/assets/images/laser.gif" border="0" alt="Laser payments supported by WorldPay">
+                            <img src="portal/templates/ifastnet-child/assets/images/pse_co.png" border="0" alt="pse">
                             <img src="portal/templates/ifastnet-child/assets/images/ELV.gif" border="0" alt="ELV payments supported by WorldPay">
-                            <img src="portal/templates/ifastnet-child/assets/images/poweredByWorldPay.gif" height="40" width="140" border="0" alt="Worldpay payments" />
-                            <img src="portal/templates/ifastnet-child/assets/images/2co11.jpg"  height="40" width="90" border="0" alt="2CheckOut payments" />
+                            <img src="portal/templates/ifastnet-child/assets/images/epayco.webp" height="40" width="140" border="0" alt="epayco" />
+                            <img src="portal/templates/ifastnet-child/assets/images/efecty.gif"  height="40" width="90" border="0" alt="efecty" />
+                            <img src="portal/templates/ifastnet-child/assets/images/daviplata_new.png" height="40" width="120"  border="0" alt="AliPay" />
                             <img src="portal/templates/ifastnet-child/assets/images/alipay-small-whitebg.png" height="40" width="120"  border="0" alt="AliPay" />
                             
 
