--- a/cartreginame.html
+++ b/cartreginame.html
@@ -908,8 +908,8 @@ jQuery(document).ready(function() {
                             <img src="portal/templates/ifastnet-child/assets/images/JCB.gif" border="0" alt="JCB payments supported by WorldPay">
                             <img src="portal/templates/ifastnet-child/assets/images/pse_co.png" border="0" alt="pse">
                             <img src="portal/templates/ifastnet-child/assets/images/ELV.gif" border="0" alt="ELV payments supported by WorldPay">
-                            <img src="portal/templates/ifastnet-child/assets/images/daviplata_new.png" height="40" width="120"  border="0" alt="AliPay" />
-                            <img src="portal/templates/ifastnet-child/assets/images/epayco.webp" height="40" width="64" border="0" alt="epayco" />
+                            <img src="portal/templates/ifastnet-child/assets/images/daviplata_new.png" height="40" width="89"  border="0" alt="daviplata" />
+                            <img src="portal/templates/ifastnet-child/assets/images/epayco.webp" height="40" width="116" border="0" alt="epayco" />
                             <img src="portal/templates/ifastnet-child/assets/images/efecty.gif"  height="40" width="90" border="0" alt="efecty" />   
                             <img src="portal/templates/ifastnet-child/assets/images/alipay-small-whitebg.png" height="40" width="80"  border="0" alt="AliPay" />
                             
