--- a/cartreginame.html
+++ b/cartreginame.html
@@ -654,28 +654,28 @@
                                                                                             <div class="col-lg-4 col-sm-6">
                                     <div class="featured-tld">
                                         <div class="img-container">
-                                            <img src="assets/img/tld_logos/site.png">
+                                            <img src="portal/assets/img/tld_logos/com.png">
                                         </div>
-                                        <div class="price site">
-                                                                                            $1.99/año                                                                                    </div>
+                                        <div class="Preio Ext .com">
+                                                                                            $49.000/año                                                                                    </div>
                                     </div>
                                 </div>
                                                                                             <div class="col-lg-4 col-sm-6">
                                     <div class="featured-tld">
                                         <div class="img-container">
-                                            <img src="assets/img/tld_logos/space.png">
+                                            <img src="portal/assets/img/tld_logos/com.co.png">
                                         </div>
-                                        <div class="price space">
-                                                                                            $2.99/año                                                                                    </div>
+                                        <div class="Precio Ext com.co">
+                                                                                            $28.000/año                                                                                    </div>
                                     </div>
                                 </div>
                                                                                             <div class="col-lg-4 col-sm-6">
                                     <div class="featured-tld">
                                         <div class="img-container">
-                                            <img src="assets/img/tld_logos/online.png">
+                                            <img src="portal/assets/img/tld_logos/online.png">
                                         </div>
-                                        <div class="price online">
-                                                                                            $2.99/año                                                                                    </div>
+                                        <div class="Precio Ext online">
+                                                                                            $18.000/año                                                                                    </div>
                                     </div>
                                 </div>
                                                     </div>
