--- a/cart2029.html
+++ b/cart2029.html
@@ -13,7 +13,8 @@
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:400,700" rel="stylesheet">
 <link href="templates/six/css/all.minf946.css?v=5937de" rel="stylesheet">
 <link href="assets/css/fontawesome-all.min.css" rel="stylesheet">
-<link href="templates/six/css/custom.css" rel="stylesheet">
+<!-- <link href="templates/six/css/custom.css" rel="stylesheet"> -->
+<link href="portal/templates/ifastnet-child/css/custom.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
