--- a/cartreginame.html
+++ b/cartreginame.html
@@ -17,7 +17,7 @@
 <link href="http://fonts.googleapis.com/css?family=Open+Sans:300,400,600|Raleway:400,700" rel="stylesheet">
 <link href="portal/templates/six/css/all.min55d7.css?v=afb1df" rel="stylesheet">
 <link href="assets/css/fontawesome-all.min.css" rel="stylesheet">
-<link href="templates/ifastnet-child/css/custom.css" rel="stylesheet">
+<link href="portal/templates/ifastnet-child/css/custom.css" rel="stylesheet">
 
 <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
 <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -27,7 +27,7 @@
 <![endif]-->
 
 <script type="text/javascript">
-    var csrfToken = '',
+    var csrfToken = '6f4e0d7a7dba40457efb24f76068b48ff7d35239',
         markdownGuide = 'Guía de Markdown',
         locale = 'en',
         saved = 'guardado',
@@ -50,7 +50,7 @@
 
         <link rel="stylesheet" type="text/css" href="portal/templates/ifastnet-child/assets/css/style.css" media="screen">
         <link href="portal/templates/ifastnet-child/css/custom.css" rel="stylesheet">
-    <link rel="shortcut icon" href="assets/img/favicon/favicon.ico" type="image/x-icon">
+    <link rel="portal/shortcut icon" href="assets/img/favicon/favicon.ico" type="image/x-icon">
     <link rel="icon" href="assets/img/favicon/favicon.ico" type="image/x-icon">
      
 </head>
@@ -199,7 +199,7 @@
                                 </a>
             </li>
 <li menuItemName="Knowledgebase" class="" id="Primary_Navbar-Knowledgebase">
-            <a href="http://kb.ifastnet.com/index.php">
+            <a href="#">
                         Preguntas Frecuentes - FAQ
                                 </a>
             </li>
@@ -288,7 +288,7 @@
             
 
 <link rel="stylesheet" type="text/css" href="portal/templates/orderforms/standard_cart/css/all.min55d7.css?v=afb1df" />
-<script type="text/javascript" src="templates/orderforms/standard_cart/js/scripts.min55d7.js?v=afb1df"></script>
+<script type="text/javascript" src="templates/orderforms/standard_cart/js/scripts.minf946.js?v=5937de"></script>
 <div id="order-standard_cart">
 
     <div class="row">
@@ -398,7 +398,7 @@
                                             <option value="indexf6ac.html?rp=/store/specialized-hosting">Specialized Hosting</option>
                                     </optgroup>
                 <optgroup label="Actions">
-                                                                <option value="/portal/cart.php?gid=registerdomain" selected>Registrar Dominios</option>
+                                                                <option value="cart.php?gid=registerdomain" selected>Registrar Dominios</option>
                                                                 <option value="cart7c76.html?gid=transferdomain">Transferir Dominios</option>
                                         <option value="cart14c8.html?a=view">Ver Carrito</option>
                 </optgroup>
@@ -423,8 +423,8 @@
 
             <div class="domain-checker-container">
                 <div class="domain-checker-bg clearfix">
-                    <form method="post" action="" id="frmDomainChecker">
-<input type="hidden" name="token" value="" />
+                    <form method="post" action="https://api.dev.name.com/v4/domains:checkAvailability" id="frmDomainChecker">
+<input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
                         <input type="hidden" name="a" value="checkDomain">
                         <div class="row">
                             <div class="col-md-8 col-md-offset-2 offset-md-2 col-xs-10 col-xs-offset-1 col-10 offset-1">
@@ -814,11 +814,11 @@ jQuery(document).ready(function() {
         <div class="container">
             <div class="row">
                 <div class="col-sm-7">
-                    <h2 class="head30">Get Your Website Online Today!</h2>
+                    <h2 class="head30">Desarrollo Web + Hosting y Dominio</h2>
                 </div>
                 <div class="col-sm-5">
                     <div class="col-md-6 col-sm-12">
-                        <div class="sp">Prices from<br><strong>$3.99</strong><span>/month</span></div>
+                        <div class="sp">Plan performance<br><strong>$35.000 </strong><span>/Mensual</span></div>
                     </div>
                     <div class="col-md-6  col-sm-12">
                         <a class="get-started" href="cart8d66.html?a=add&amp;pid=86">Get Started!</a>
@@ -976,7 +976,7 @@ jQuery(document).ready(function() {
 </div>
 
     <script type="text/javascript">
-        var csrfToken = 'f55d26e1e2b12b92ac516b6aaf2dad21e28fcd0a';
+        var csrfToken = '6f4e0d7a7dba40457efb24f76068b48ff7d35239';
     </script>
     <form action="#" id="frmGeneratePassword" class="form-horizontal">
     <div class="modal fade" id="modalGeneratePassword">
