--- a/cartreginame.html
+++ b/cartreginame.html
@@ -436,8 +436,9 @@
                                 </div>
                             </div>
                                  <div class="col-md-8 col-md-offset-2 offset-md-2 col-xs-10 col-xs-offset-1 col-10 offset-1">
-                                    
-                                            </div>
+                                    <div class="captcha-container" id="captchaContainer">
+                                                                                    <br>
+                                           
                                                                             </div>
                                 </div>
                                                     </div>
