--- a/cartreginame.html
+++ b/cartreginame.html
@@ -814,7 +814,7 @@ jQuery(document).ready(function() {
         <div class="container">
             <div class="row">
                 <div class="col-sm-7">
-                    <h2 class="head30">Desarrollo Web </h2> <div class="sp"> </strong><span>+ Hosting y Dominio</span></h5>
+                    <h2 class="head30">Desarrollo Web </h2> <div class="sp">+ Hosting y Dominio<br><strong></span></div>
                 </div>
                 <div class="col-sm-5">
                     <div class="col-md-6 col-sm-12">
