--- a/cartreginame.html
+++ b/cartreginame.html
@@ -814,11 +814,11 @@ jQuery(document).ready(function() {
         <div class="container">
             <div class="row">
                 <div class="col-sm-7">
-                    <h2 class="head30">Desarrollo Web </h2> <div class="sp">+ Hosting y Dominio<br><strong></span></div>
+                    <h2 class="sp">Desarrollo Web<br><strong>+ Hosting y Dominio<br><strong></span></div>
                 </div>
                 <div class="col-sm-5">
                     <div class="col-md-6 col-sm-12">
-                        <div class="sp">performance<br><strong>$35.000 </strong><span>/Mensual</span></div>
+                        <div class="sp">performance<br><strong>$35.000</strong><span>/Mes</span></div>
                     </div>
                     <div class="col-md-6  col-sm-12">
                         <a class="get-started" href="cart8d66.html?a=add&amp;pid=86">Get Started!</a>
