--- a/cartreginame.html
+++ b/cartreginame.html
@@ -813,10 +813,8 @@ jQuery(document).ready(function() {
     <section class="footer-get-started">
         <div class="container">
             <div class="row">
-                <div class="col-sm-7">
-                    
-                    <div class="sp">Desarrollo Web<br><strong>$+ Hosting y</strong><span>Dominio</span></div>
-                    
+                <div class="col-sm-7"> 
+                    <div class="sp">Desarrollo Web<br><strong>+ Hosting</strong><span>& Dominio</span></div>
                 </div>
                 <div class="col-sm-5">
                     <div class="col-md-6 col-sm-12">
