--- a/cartreginame.html
+++ b/cartreginame.html
@@ -814,14 +814,14 @@ jQuery(document).ready(function() {
         <div class="container">
             <div class="row">
                 <div class="col-sm-7"> 
-                    <div class="sp">Desarrollo Web<br><strong>+ Hosting</strong><span>& Dominio</span></div>
+                    <div class="sp">Desarrollo Web<br><strong>+ Hosting & Dominio</strong><span></span></div>
                 </div>
                 <div class="col-sm-5">
                     <div class="col-md-6 col-sm-12">
-                        <div class="sp">performance<br><strong>$35.000</strong><span>/Mes</span></div>
+                        <div class="sp">performance<br><strong>$55.000</strong><span>/Mes</span></div>
                     </div>
                     <div class="col-md-6  col-sm-12">
-                        <a class="get-started" href="cart8d66.html?a=add&amp;pid=86">Get Started!</a>
+                        <a class="get-started" href="cart8d66.html?a=add&amp;pid=86">¿Contratar Ya?</a>
                     </div>
                 </div>
             </div>
