--- a/cartreginame.html
+++ b/cartreginame.html
@@ -1036,7 +1036,7 @@ jQuery(document).ready(function() {
 
 
     <!--Start Cookie Script-->
-    <script type="text/javascript" charset="UTF-8" src="../../cookie-script.com/s/3629b17dbdd919aa1a4b91bf95a98fc9.js"></script>
+   <script type="text/javascript" charset="UTF-8" src="//cdn.cookie-script.com/s/1fbeb4cd8d5043d0fb7f2bc0d80b8957.js"></script>
     <!--End Cookie Script-->
 
 
