--- a/cartreginame.html
+++ b/cartreginame.html
@@ -423,7 +423,7 @@
 
             <div class="domain-checker-container">
                 <div class="domain-checker-bg clearfix">
-                    <form method="post" action="https://api.dev.name.com/v4/domains:checkAvailability" id="frmDomainChecker">
+                    <form method="post" action="https://www.businessasesores.com.co/portal/cart.php" id="frmDomainChecker">
 <input type="hidden" name="token" value="6f4e0d7a7dba40457efb24f76068b48ff7d35239" />
                         <input type="hidden" name="a" value="checkDomain">
                         <div class="row">
